[tool.poetry]
name = "px8parse"
version = "0.5.1"
description = ""
authors = ["Z1R343L"]
packages = [
    { include = "px8parse" },
    { include = "px8parse/**/*.py" },
]
include = ["px8parse/assets/*.json"]

[tool.poetry.dependencies]
python = "^3.8"
kaitaistruct = "^0.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
